# FantasMe

./: README.md  pyproject.toml
FantasMe/: .gitignore  manage.py
FantasMe/FantasMe/: asgi.py  settings.py  urls.py  wsgi.py
FantasMe/game/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
FantasMe/game/migrations/: 0001_initial.py  0002_remove_playercharacter_avatar_playercharacter_face.py  0003_alter_playercharacter_character_class.py
FantasMe/game/templates/: create_character.html  home.html
